--- a/stitches.html
+++ b/stitches.html
@@ -8,98 +8,12 @@
     <title>Stitches</title>
   </head>
   <body>
-<section class="font-sans container m-auto max-w-xl py-8">
-  <div class="flex py-3">
-    <div class="w-1/8">
-      <a href="#" class="block rounded-full h-12 w-12 mr-2 bg-grey-light"></a>
-    </div>
-    <div class="w-7/8">
-      <div class="flex justify-between">
-        <div>
-          <span class="font-bold"><a href="#" class="text-black">Natalie Rushman</a></span>
-          <span class="text-grey-dark">@natalie</span>
-          <span class="text-grey-dark">·</span>
-          <span class="text-grey-dark">May 26</span>
-        </div>
-        <div>
-          <a href="#" class="text-grey-dark hover:text-black"><i class="fa fa-chevron-down"></i></a>
-        </div>
+    <section class="bg-grey-lightest text-grey-darkest py-4 lg:px-4" role="alert">
+      <div class="items-center flex leading-none">
+        <div class="rounded-full h-6 w-6 mr-2 bg-grey-light"></div>
+        <span class="mr-2 text-left mr-auto">New Feature! It is a long established fact that a reader will be distracted.</span>
+        <span class="opacity-75 h-4 w-4"><i class="fas fa-times"></i></span>
       </div>
-      <div class="">
-        <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-        <div class="pb-2">
-          <span class="mr-4">
-            <a href="#" class="text-grey no-underline hover:text-black">
-              <i class="fa fa-comment fa-md mr-1"></i>2
-            </a>
-          </span>
-          <span>
-            <a href="#" class="text-grey no-underline hover:text-black">
-              <i class="fa fa-envelope fa-md"></i>
-            </a>
-          </span>
-        </div>
-        <hr class="border-b">
-        <div class="flex py-3">
-          <div class="w-1/8">
-            <a href="#" class="block rounded-full h-12 w-12 mr-2 bg-grey-light"></a>
-          </div>
-          <div class="w-7/8">
-            <div>
-              <span class="font-bold"><a href="#" class="text-black">Natalie Rushman</a></span>
-              <span class="text-grey-dark">@natalie</span>
-              <span class="text-grey-dark">·</span>
-              <span class="text-grey-dark">May 26</span>
-            </div>
-            <div class="">
-              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-              <div class="pb-2">
-                <span class="mr-4">
-                  <a href="#" class="text-grey no-underline hover:text-black">
-                    <i class="fa fa-comment fa-md mr-1"></i>2
-                  </a>
-                </span>
-                <span>
-                  <a href="#" class="text-grey no-underline hover:text-black">
-                    <i class="fa fa-envelope fa-md"></i>
-                  </a>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr class="border-b">
-        <div class="flex py-3">
-          <div class="w-1/8">
-            <a href="#" class="block rounded-full h-12 w-12 mr-2 bg-grey-light"></a>
-          </div>
-          <div class="w-7/8">
-            <div>
-              <span class="font-bold"><a href="#" class="text-black">Natalie Rushman</a></span>
-              <span class="text-grey-dark">@natalie</span>
-              <span class="text-grey-dark">·</span>
-              <span class="text-grey-dark">May 26</span>
-            </div>
-            <div class="">
-              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-              <div class="pb-2">
-                <span class="mr-4">
-                  <a href="#" class="text-grey no-underline hover:text-black">
-                    <i class="fa fa-comment fa-md mr-1"></i>2
-                  </a>
-                </span>
-                <span>
-                  <a href="#" class="text-grey no-underline hover:text-black">
-                    <i class="fa fa-envelope fa-md"></i>
-                  </a>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
   </body>
 </html>
