--- a/stitches.html
+++ b/stitches.html
@@ -8,11 +8,21 @@
     <title>Stitches</title>
   </head>
   <body>
-    <section class="bg-grey-lightest text-grey-darkest py-4 lg:px-4" role="alert">
-      <div class="items-center flex leading-none">
-        <div class="rounded-full h-6 w-6 mr-2 bg-grey-light"></div>
-        <span class="mr-2 text-left mr-auto">New Feature! It is a long established fact that a reader will be distracted.</span>
-        <span class="opacity-75 h-4 w-4"><i class="fas fa-times"></i></span>
+    <section class="bg-white py-4">
+      <div class="container container max-w-xl m-auto flex">
+        <h2 class="w-1/4 font-light">Important Stats</h2>
+        <div class="w-1/4">
+          <span class="text-xs inline-block mr-2 uppercase">clickrate</span>
+          <h2 class="inline-block">34%</h2>
+        </div>
+        <div class="w-1/4">
+          <span class="text-xs inline-block mr-2 uppercase">pageviews</span>
+          <h2 class="inline-block">465</h2>
+        </div>
+        <div class="w-1/4">
+          <span class="text-xs inline-block mr-2 uppercase">influence</span>
+          <h2 class="inline-block">65%</h2>
+        </div>
       </div>
     </section>
   </body>
