--- a/stitches.html
+++ b/stitches.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body>
 <section class="bg-white py-4 font-sans">
-  <div class="container container max-w-xl m-auto flex items-center justify-center">
-    <h1 class="w-1/4 font-light tracking-wide">Important<br>Stats</h1>
-    <div class="w-1/4">
+  <div class="container container max-w-xl m-auto flex flex-wrap md:flex-no-wrap items-center justify-center">
+    <h1 class="w-full md:w-1/4 font-medium tracking-wide mb-4 md:mb-0">Important<br>Stats</h1>
+    <div class="w-1/3 md:w-1/4">
       <span class="text-xs inline-block mr-2 uppercase text-grey-darkest tracking-wide">clickrate</span>
       <h2 class="inline-block">34%</h2>
     </div>
-    <div class="w-1/4">
+    <div class="w-1/3 md:w-1/4">
       <span class="text-xs inline-block mr-2 uppercase text-grey-darkest tracking-wide">pageviews</span>
       <h2 class="inline-block">465</h2>
     </div>
-    <div class="w-1/4">
+    <div class="w-1/3 md:w-1/4">
       <span class="text-xs inline-block mr-2 uppercase text-grey-darkest tracking-wide">influence</span>
       <h2 class="inline-block">65%</h2>
     </div>
