add cards 2 template

--- a/stitches.html
+++ b/stitches.html
@@ -9,26 +9,11 @@
     <title>Stitches</title>
   </head>
   <body>
-<section class="bg-white py-4 font-sans">
-  <div class="container container max-w-xl m-auto flex flex-wrap md:flex-no-wrap items-center justify-between">
-    <div class="flex w-full justify-start justify-center md:justify-start">
-      <div class="flex flex-col border-r px-8 items-center">
-        <h1 class="">34%</h1>
-        <span class="text-xs block uppercase text-grey-darkest tracking-wide mt-1">clickrate</span>
+    <section class="bg-white py-4 font-sans">
+      <div class="flex items-baseline justify-between border-b-2 border-grey-light mb-10">
+        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2 border-indigo -mb-2px">Design Tips</h2>
+        <a href="#" class="font-semibold text-indigo-dark hover:underline no-underline">View All</a>
       </div>
-      <div class="flex flex-col px-8 border-r items-center">
-        <h1 class="">465</h1>
-        <span class="text-xs block uppercase text-grey-darkest tracking-wide mt-1">pageviews</span>
-      </div>
-      <div class="flex flex-col px-8 items-center">
-        <h1 class="">65%</h1>
-        <span class="text-xs block uppercase text-grey-darkest tracking-wide mt-1">influence</span>
-      </div>
-    </div>
-    <button class="w-full md:w-32 bg-grey-darkest hover:bg-black text-white py-2 px-4 rounded mt-6 md:mt-0" type="button">
-    Read More
-    </button>
-  </div>
-</section>
+    </section>
   </body>
 </html>
