--- a/stitches.html
+++ b/stitches.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <section class="bg-white py-4 font-sans">
-      <div class="flex items-baseline justify-between border-b-2 border-grey-light mb-10">
-        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2 border-indigo -mb-2px">Design Tips</h2>
-        <a href="#" class="font-semibold text-indigo-dark hover:underline no-underline">View All</a>
+      <div class="container m-auto max-w-xl flex items-baseline justify-start border-b-2 border-grey-light mb-10">
+        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2">All</h2>
+        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2 border-indigo">Recent</h2>
+        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2">Assigned to Me</h2>
+        <h2 class="text-base font-display font-bold tracking-wide uppercase py-4 border-b-2">Pending</h2>
       </div>
     </section>
   </body>
