--- a/stitches.html
+++ b/stitches.html
@@ -7,18 +7,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
-  <a href="/" class="block text-left">
-    <img src="./logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
+  <body><nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
+  <a href="#">
+    <img src="./logo.png" class="h-10" alt="logo">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
-    <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
-    Sign Up
-    </button>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
+  </ul>
+  <ul class="text-sm text-grey-dark list-reset flex items-center">
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
+    <li>
+      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+      Sign Up
+      </button>
+    </li>
   </ul>
 </nav><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
   <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
@@ -46,47 +51,6 @@
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
     <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
-</section><section class="font-sans container m-auto max-w-md xl:max-w-lg flex flex-col flex-wrap sm:flex-row justify-center">
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Basic Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$29<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">5</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">20</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">9/5</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Team Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$59<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">10</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">40</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">12/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Corporate Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$79<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
-  <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
-    <label for="" class="uppercase tracking-loose font-bold text-sm">Enterprise Plan</label>
-    <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$199<span class="text-grey-dark font-light text-xs">/mo</span></h1>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Projects</p>
-    <p class="my-2 text-grey-darker"><strong class="text-black pr-2">Unlimited</strong>Images</p>
-    <p class="mt-2 mb-6 text-grey-darker"><strong class="text-black pr-2">24/7</strong>Support</p>
-    <button class="bg-transparent hover:bg-black text-black-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
-    Buy Now
-    </button>
-  </div>
 </section><section class="font-sans container m-auto flex flex-col md:flex-row py-8 max-w-xl px-6 lg:px-0">
   <div class="w-full md:w-1/4 border-b md:border-0 mb-6 md:mb-0 pb-6 md:pb-0 pr-8 flex justify-center items-start flex-col">
     <label for="" class="font-bold">Important Note</label>
