fix column issue

--- a/index.html
+++ b/index.html
@@ -40,100 +40,100 @@
       </div>
       <div class="flex flex-wrap flex-col items-start justify-start js-snippets">
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
-            <img src="./blocks/navigation-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-2">
-            <img src="./blocks/navigation-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-3">
-            <img src="./blocks/navigation-3.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-3.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-4">
-            <img src="./blocks/navigation-4.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-4.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
-            <img src="./blocks/hero-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208867/stitches/hero-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-2">
-            <img src="./blocks/hero-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208863/stitches/hero-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-3">
-            <img src="./blocks/hero-3.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208864/stitches/hero-3.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-1">
-            <img src="./blocks/footer-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-2">
-            <img src="./blocks/footer-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-3">
-            <img src="./blocks/footer-3.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-3.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-1">
-            <img src="./blocks/features-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-2">
-            <img src="./blocks/features-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-3">
-            <img src="./blocks/features-3.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-3.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-4">
-            <img src="./blocks/features-4.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-4.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-5">
-            <img src="./blocks/features-5.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-5.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-6">
-            <img src="./blocks/features-6.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-6.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-pricing" id="pricing-1">
-            <img src="./blocks/pricing-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/pricing-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-1">
-            <img src="./blocks/articles-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-2">
-            <img src="./blocks/articles-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-1">
-            <img src="./blocks/cta-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-2">
-            <img src="./blocks/cta-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-form" id="form-1">
-            <img src="./blocks/form-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/form-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-progress" id="progress-1">
-            <img src="./blocks/progress-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/progress-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-list" id="list-1">
-            <img src="./blocks/list-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/list-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-1">
-            <img src="./blocks/feed-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/feed-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-1">
-            <img src="./blocks/notification-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-2">
-            <img src="./blocks/notification-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-1">
-            <img src="./blocks/stats-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-2">
-            <img src="./blocks/stats-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-1">
-            <img src="./blocks/cards-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208871/stitches/cards-1.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
-            <img src="./blocks/cards-2.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208866/stitches/cards-2.png" alt="" class="border border-grey-light">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-tab" id="tab-1">
-            <img src="./blocks/tabs-1.png" alt="" class="border border-grey-light">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/tabs-1.png" alt="" class="border border-grey-light">
         </figure>
       </div>
     </section>
