--- a/stitches.html
+++ b/stitches.html
@@ -7,25 +7,40 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
-  <a href="#">
-    <img src="./logo.png" class="h-10" alt="logo">
-  </a>
-  <ul class="text-sm text-grey-dark list-reset flex items-center">
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
-  </ul>
+  <body><nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden items-center">
+  <div class="flex items-center">
+    <a href="/" class="mr-4 w-32">
+      <img src="./logo.png" class="rounded-full w-full" alt="logo">
+    </a>
+    <input type="search" placeholder="Search" class="text-sm transition focus:outline-0 border border-transparent focus:bg-white focus:border-grey-light placeholder-grey-darkest rounded bg-grey-lighter py-1 px-2 pl-10 appearance-none leading-normal ds-input">
+    <ul class="text-sm text-grey-dark list-reset flex items-center">
+      <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Questions</a></li>
+    </ul>
+  </div>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
     <li>
-      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
-      Sign Up
-      </button>
+          <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+    Sign Up
+    </button>
     </li>
   </ul>
-</nav><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
+</nav><section class="font-sans text-center my-8 px-8">
+  <h2 class="capitalize font-light">Ready to get started?</h2>
+  <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
+  <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Learn More</button>
+</section><section class="font-sans text-center py-8 px-4 lg:px-0 bg-grey-lightest">
+  <div class="container flex flex-col sm:flex-row bg-white max-w-xl m-auto shadow">
+    <div class="w-full sm:w-3/4 px-6 pt-6 text-left flex flex-col justify-center">
+      <h2 class="capitalize font-medium">Ready to get started?</h2>
+      <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
+    </div>
+    <div class="w-full sm:w-1/4 flex justify-start sm:justify-center items-center pl-6 pb-6 sm:pl-0 sm:pb-0">
+      <button class=" bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Learn More</button>
+    </div>
+  </div>
+</section><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
   <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
     <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
@@ -51,12 +66,43 @@
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
     <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
-</section><section class="font-sans container m-auto flex flex-col md:flex-row py-8 max-w-xl px-6 lg:px-0">
-  <div class="w-full md:w-1/4 border-b md:border-0 mb-6 md:mb-0 pb-6 md:pb-0 pr-8 flex justify-center items-start flex-col">
-    <label for="" class="font-bold">Important Note</label>
-    <p class="leading-normal mt-4 border-0 md:border-r md:pr-2">Nullam gravida sem vel massa pulvinar cursus. In sagittis enim vitae eros ultrices sagittis</p>
+</section><footer class="font-sans bg-black text-white py-8 px-4">
+  <div class="mx-auto max-w-xl overflow-hidden flex flex-col lg:flex-row justify-between">
+    <a href="/" class="block mr-4 w-1/2">
+      <img src="./logo-white.png" class="w-32" alt="logo">
+    </a>
+    <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
+      </ul>
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Company</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
+      </ul>
+      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Info</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
+      </ul>
+      <div class="text-grey-dark flex flex-col">
+        <div class="inline-block py-2 px-3 text-white uppercase font-medium text-xs tracking-wide">Follow Us</div>
+        <div class="flex pl-4 justify-start">
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
+          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="w-full md:w-3/4 leading-normal column-0 lg:column-2" "="">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. </div>
-</section></body>
+  <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
+</footer></body>
 </html>
