fix couple template mismatch issues

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-notification">Notification</button>
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-stats">Stats</button>
         <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-cards">Cards</button>
-        <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-tab">Tab</button>
+        <button class="bg-transparent hover:bg-black text-sm text-black font-semibold hover:text-white py-1 px-2 mr-2 my-1 border border-black hover:border-transparent rounded" data-filter="st-tabs">Tabs</button>
       </div>
       <div class="flex flex-wrap flex-col items-start justify-start js-snippets">
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
@@ -132,7 +132,7 @@
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
             <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208866/stitches/cards-2.png" alt="" class="border border-grey-light">
         </figure>
-        <figure class="js-snippet w-1/2 p-2 st-tab" id="tab-1">
+        <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
             <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/tabs-1.png" alt="" class="border border-grey-light">
         </figure>
       </div>
