--- a/stitches.html
+++ b/stitches.html
@@ -7,102 +7,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
-  <body><nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden items-center">
-  <div class="flex items-center">
-    <a href="/" class="mr-4 w-32">
-      <img src="./logo.png" class="rounded-full w-full" alt="logo">
-    </a>
-    <input type="search" placeholder="Search" class="text-sm transition focus:outline-0 border border-transparent focus:bg-white focus:border-grey-light placeholder-grey-darkest rounded bg-grey-lighter py-1 px-2 pl-10 appearance-none leading-normal ds-input">
-    <ul class="text-sm text-grey-dark list-reset flex items-center">
-      <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
-      <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Questions</a></li>
-    </ul>
-  </div>
-  <ul class="text-sm text-grey-dark list-reset flex items-center">
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    <li>
-          <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
-    Sign Up
-    </button>
-    </li>
-  </ul>
-</nav><section class="font-sans text-center my-8 px-8">
-  <h2 class="capitalize font-light">Ready to get started?</h2>
-  <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
-  <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Learn More</button>
-</section><section class="font-sans text-center py-8 px-4 lg:px-0 bg-grey-lightest">
-  <div class="container flex flex-col sm:flex-row bg-white max-w-xl m-auto shadow">
-    <div class="w-full sm:w-3/4 px-6 pt-6 text-left flex flex-col justify-center">
-      <h2 class="capitalize font-medium">Ready to get started?</h2>
-      <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
-    </div>
-    <div class="w-full sm:w-1/4 flex justify-start sm:justify-center items-center pl-6 pb-6 sm:pl-0 sm:pb-0">
-      <button class=" bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Learn More</button>
+  <body><section class="font-sans h-screen w-full bg-cover text-center flex flex-col items-center justify-center" style="background:url(https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png) no-repeat center;">
+  <div class="bg-white text-black rounded-full h-16 w-16 flex items-center justify-center mb-8"><i class="fas fa-play ml-1"></i></div>
+  <label for="tagline" class="uppercase tracking-extrawide text-white text-xs font-hairline mt-8">Watch Video</label>
+  <h3 class="text-white mx-auto max-w-sm mt-4 font-normal text-2xl leading-normal">Differentiate Yourself And Attract More Attention Sales And Profits</h3>
+</section><section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8">
+  <div class="container mx-auto max-w-lg px-8 py-8 font-normal leading-normal">
+    <h3 class="text-2xl">Grow Your Business</h3>
+    <p class="">Build high performing teams, establish design practices, mentor and grow the next generation of great designers, and design interfaces and experiences.</p>
+    <div class="max-w-sm mt-4 sm:flex">
+      <input type="email" class="block w-full rounded sm:rounded-r-none focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email" placeholder="Enter your email" required="">
+      <button class="uppercase rounded text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light sm:rounded-l-none tracking-wide px-6">Subscribe</button>
     </div>
   </div>
-</section><section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
-  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </div>
-  <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-xs m-auto mb-6 lg:mb-0">
-    <img src="./demo-phone.png" alt="">
-  </div>
-  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
-    <h3 class="text-black mb-2 font-light">Feature 1</h3>
-    <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </div>
-</section><footer class="font-sans bg-black text-white py-8 px-4">
-  <div class="mx-auto max-w-xl overflow-hidden flex flex-col lg:flex-row justify-between">
-    <a href="/" class="block mr-4 w-1/2">
-      <img src="./logo-white.png" class="w-32" alt="logo">
-    </a>
-    <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
-      </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Company</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
-      </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Info</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
-      </ul>
-      <div class="text-grey-dark flex flex-col">
-        <div class="inline-block py-2 px-3 text-white uppercase font-medium text-xs tracking-wide">Follow Us</div>
-        <div class="flex pl-4 justify-start">
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
-</footer></body>
+</section></body>
 </html>
